k8s-Dir/server1/chatbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
  namespace: server1  
spec: 
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: chatbot-port
  selector:
    app: chatbot
