k8s-Dir/server1/chatbot-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ingress
  namespace: server1  
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-innocode"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: 26m
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: apichat-genio-ae-ssl
      hosts:
        - apichat.genio.ae

  rules:
    - host: apichat.genio.ae
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: chatbot-service
                port:
                  number: 80
